--- a/style.css
+++ b/style.css
@@ -11,8 +11,10 @@
 .container {
   width: 1000px;
   margin: 10px auto;
-  background-color: #c2c2c2;
+  background-color: #f7f7f7;
   border-radius: 5px;
+  -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+          box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
 }
 
 header {
@@ -49,10 +51,7 @@ header img {
 
 section {
   clear: both;
-}
-
-article {
-  font-weight: 700;
+  background-color: white;
 }
 
 article h2 {
@@ -61,10 +60,6 @@ article h2 {
 
 article p {
   padding-left: 20px;
-}
-
-article ul:first-child {
-  font-weight: 100;
 }
 
 img.first {
@@ -103,16 +98,19 @@ table {
   margin: 10px 10%;
   border: solid 1px black;
   border-collapse: collapse;
-  background-color: lightgray;
+  background-color: white;
 }
 
 table th {
-  font-weight: 700;
   text-transform: uppercase;
 }
 
 table th, table td {
   border: solid 1px black;
+}
+
+table td {
+  padding-left: 7px;
 }
 
 a {
