--- a/style.scss
+++ b/style.scss
@@ -36,6 +36,8 @@ header {
     }
 }
 
+
+
 section {
     clear: both;
     background-color: $mainColor + #111111;
@@ -52,7 +54,7 @@ article {
 
 img.first {
     float: left;
-    margin: 0 20px 20px 0;
+    margin: 0 20px 0 0;
     width: 250px;
 }
 
